made it workable on linux

--- a/program1/Makefile
+++ b/program1/Makefile
@@ -1,6 +1,7 @@
 #
 #	Makefile for OpenGL program from Chapter 1 in Red Book
 #
+IS_LINUX = 1
 
 CC = g++
 CFLAGS = -D_DEBUG
@@ -9,7 +10,13 @@ CPPFLAGS = -g
 .cpp.o:
 	$(CC) -c $(CFLAGS) $(CPPFLAGS) -o $@  $<
 
+
+
+ifdef IS_LINUX
+LIBS = -lGL -lGLU -lGLEW -lglut
+else
 LIBS = -framework OpenGL -framework GLUT -lglew
+endif
 
 SRCS = program1.cpp LoadShaders.cpp
 OBJS = program1.o LoadShaders.o
